--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
-baseURL = "http://example.org"
-title = "Hugo Zdoc Theme"
+baseURL = "http://git-repo.info"
+title = "git-repo"
 theme = "zdoc"
 
 defaultContentLanguage = "zh_cn"
