en: translate from zh_cn
Signed-off-by: Jiang Xin <zhiyou.jx@alibaba-inc.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@ baseURL = "http://git-repo.info"
 title = "git-repo"
 theme = "zdoc"
 
-defaultContentLanguage = "zh_cn"
+defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = true
 hasCJKLanguage = true
 
