post: agit-flow and git-repo (Chinese version)
Signed-off-by: Jiang Xin <zhiyou.jx@alibaba-inc.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,6 +16,9 @@ googleAnalytics = ""
 
 disableKinds = ["taxonomyTerm"]
 
+[permalinks]
+  posts = "/:year/:month/:title/"
+
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
