config: use slug instead of tilte for permalinks
Signed-off-by: Jiang Xin <zhiyou.jx@alibaba-inc.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,7 +17,7 @@ googleAnalytics = ""
 disableKinds = ["taxonomyTerm"]
 
 [permalinks]
-  posts = "/:year/:month/:title/"
+  posts = "/:year/:month/:slug/"
 
 [markup]
   [markup.goldmark]
