--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -22,7 +22,7 @@ paginateWindow = 1
 taxoPaginate = 13
 taxoGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
 
-github = "https://github.com/aliyun/git-repo-go"
+github = "https://github.com/alibaba/git-repo-go"
 
 # comment
 enableComment = true
@@ -37,7 +37,7 @@ commento = false
 
 [utterances]       # https://utteranc.es/
   owner = "jiangxin"              # Your GitHub ID
-  repo = "aliyun/git-repo-go-doc"               # The repo to store comments
+  repo = "alibaba/git-repo-go-doc"               # The repo to store comments
 
 [gitalk]           # Gitalk is a comment system based on GitHub issues. see https://github.com/gitalk/gitalk
   owner = ""              # Your GitHub ID
