--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -19,12 +19,12 @@
 [[main]]
   identifier = "download"
   name = "Download"
-  url = "https://github.com/aliyun/git-repo-go/releases"
+  url = "https://github.com/alibaba/git-repo-go/releases"
   weight = 4
 
 [[main]]
   identifier = "sourcecode"
   name = "GitHub"
-  url = "https://github.com/aliyun/git-repo-go"
+  url = "https://github.com/alibaba/git-repo-go"
   weight = 5
 
